tests/toy/neg/001656_mutation.toylang
program a = { while a int do sleep; } .
